@@ -9,6 +9,8 @@ ikiwiki (3.04) UNRELEASED; urgency=low
     (smcv) 
   * Updated German translation (Kai Wasserbäch). Closes: #514251
   * Fix unusual --setup --post-commit command line option combo.
+  * Create any missing directory necessary to put the wrapper
+    file into. Closes: #514384
 
  -- Joey Hess <joeyh@debian.org>  Sat, 31 Jan 2009 19:04:45 -0500
 
